--- a/charge/css/style.css
+++ b/charge/css/style.css
@@ -1157,7 +1157,7 @@
 .anytix .btn-primary.block span.alert:after {
   content: "";
   position: absolute;
-  top: 100%;
+  top: calc(100% - 1px);
   right: 12px;
   background-color: #2b3843;
   width: 20px;
