--- a/charge/scss/component/_button.scss
+++ b/charge/scss/component/_button.scss
@@ -113,7 +113,7 @@ button {
       &:after {
         content: "";
         position: absolute;
-        top: 100%;
+        top: calc(100% - 1px);
         right: 12px;
         background-color: #2b3843;
         width: 20px;
